welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: '<-' expected but ')' found.
for (i -> 1 to n) {
                ^SlugHunting:15: error: illegal start of simple expression
}  
^